# EmbeddedRustSystems

./: Cargo.toml  GitCargo.toml  LICENSE  README.md  build.rs  flake.nix
.cargo/: config.toml
.github/workflows/: ci_checks.yml
docs/: build_guide.md
embassy_examples/: blinky_2w.rs  gpio.rs  serial_usb_w_1200_baud_ouch.rs
src/: chase.rs  gpio.rs  main.rs  on_board_blinky.rs  protocol.rs  serial.rs  serial_usb.rs  sys.rs
tools/serial_client/: README.md  baud_touch_1200.py  command_sender.py  pyproject.toml  serial_client.py  serial_client_env.yml
