[package]
edition = "2024"
name = "embedded-systems"
version = "0.1.0"
license = "LICENSE-GPL-3.0"

[build-dependencies]
regex = "1.11.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "1"
defmt-rtt = "1"

[target.'cfg( target_arch = "arm" )'.dependencies]
panic-probe = { version = "1", features = ["print-defmt"] }

[target.'cfg( target_arch = "riscv32" )'.dependencies]
panic-halt = { version = "1.0.0" }

[target.thumbv6m-none-eabi.dependencies]
rp2040-boot2 = "0.3"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }

[target.riscv32imac-unknown-none-elf.dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

[target."thumbv8m.main-none-eabihf".dependencies]
rp235x-hal = { version = "0.3", features = ["rt", "critical-section-impl"] }

embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = "0.5.0"
embassy-rp = { version = "0.9.0", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-usb = "0.5.1"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
static_cell = "2.1.1"
heapless = "0.8"

# cyw43 = { version = "0.5", features = ["defmt", "firmware-logs"] }
# cyw43-pio = { version = "0.8", features = ["defmt"] }

# # pull in the firmware blobs as constants
# cyw43-firmware = { version = "0.1", default-features = false, features = [
#     "wifi",
# ] }
